--- a/client.html
+++ b/client.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Demo app</title>
+    <title>playground app</title>
   </head>
   <body>
     <div id="app">
